# git-chest

./: LICENSE-APACHE  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
src/: store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/migrations/: 20240826043044_create_repo_tables.sql  20240826043239_create_submodule_table.sql  20240902182743_create_github_repo_table.sql  20240908091605_create_rate_limit_table.sql  20240916131716_create_github_user_table.sql  20240916145639_create_user_table.sql
src-tauri/src/: commands.rs  error.rs  events.rs  main.rs  platforms.rs  repo.rs  settings.rs  state.rs  utils.rs
src-tauri/src/commands/: repo.rs  settings.rs  user.rs
src-tauri/src/utils/: data.rs  dirs.rs  image.rs  rate_limit.rs
src/app/: layout.tsx  page.tsx
src/app/add/: page.tsx
src/app/repo/: page.tsx
src/app/watching/: page.tsx
src/components/: index.tsx
src/components/global/: Button.tsx  Input.tsx  Label.tsx  Loader.tsx  Modal.tsx  MultiSelect.tsx  Select.tsx  Switch.tsx  SwitchBox.tsx  TextArea.tsx
src/components/global/Toasts/: Toast.tsx  Toasts.tsx
src/components/global/Tooltip/: Tooltip.tsx  TooltipText.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/slices/: toasts.slice.ts
src/styles/: app.css  markdown.css  themes.css
src/typings/: core.ts  platform.ts
src/utils/: formatDate.ts  platform.ts
