[package]
name = "git-chest"
version = "0.0.1"
description = "Git metadata browsing client."
authors = ["Slekup <opensource@slekup.com>"]
license = "MIT or Apache-2.0"
repository = "https://github.com/slekup/git-chest"
default-run = "git-chest"
edition = "2021"
rust-version = "1.80"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [] }
tracing = "0.1.40"
chrono = "0.4.31"
dirs = "5.0.1"
anyhow = "1.0.86"
tracing-subscriber = "0.3.17"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
tauri-plugin-shell = "2.0.0-alpha.2"
tauri-plugin-dialog = "2.0.0-alpha.2"
tokio = { version = "1.29.1", features = ["full"] }
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio-native-tls"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
